PipelineController: Fix definition of IsSuspended().

BUG=643383

Review-Url: https://codereview.chromium.org/2308893002
Cr-Commit-Position: refs/heads/master@{#416432}

Former-commit-id: 4e8a2b9aabbc3fce83dcd99a57ed7f5b0e633ffe